<resources>
    <string name="app_name">OPSC7312Part1</string>

    <string name="title_activity_fragment_testing">Your Activity Title</string>
    <string name="first_fragment_label">First Fragment Label</string>
    <string name="second_fragment_label">Second Fragment Label</string>

    <!--dummy data for sensor data-->
    <string name="head_1">temp</string>
    <string name="head_2">humidty</string>
    <string name="head_3">lightlevel</string>
    <string name="head_4">flowrate</string>
    <string name="head_5">ph</string>
    <string name="head_6">ec</string>


    <string name="range_1">18.29-25.00</string>
    <string name="range_2">64.96-75.02</string>
    <string name="range_3">80-300</string>
    <string name="range_4">0-2</string>
    <string name="range_5">5.79-6.30</string>
    <string name="range_6">1.99-3.50</string>


    <string name="reading_1">6</string>
    <string name="reading_2">3.0</string>
    <string name="reading_3">1</string>
    <string name="reading_4">6.2</string>

    <string name="status_1">true</string>
    <string name="status_2">true</string>
    <string name="status_3">true</string>
    <string name="status_4">true</string>
    <string name="status_5">true</string>
    <string name="status_6">true</string>


    <string name="open">Open</string>
    <string name="close">Close</string>


    <!--controls info (equipment controls and predictions )-->
    <string-array name="control_info_title">
        <item name="control_title_1">AI Controls:</item>
        <item name="control_title_2">Light:</item>
        <item name="control_title_3">Water pump:</item>
        <item name="control_title_4">ph Pump:</item>
        <item name="control_title_5">EC pump:</item>
        <item name="control_title_6">Extractor Fan:</item>
        <item name="control_title_7">Regular Fan:</item>
        <item name="control_title_8">AI Status:</item>
        <item name="control_title_9">Temperature:</item>
        <item name="control_title_10">Humidity:</item>
        <item name="control_title_11">pH:</item>
        <item name="control_title_12">EC:</item>
    </string-array>

    <string-array name="control_info_desc">
        <item name="control_desc_1">To manually control the equipment turn AI off. Turn AI on for AI predictions and automatic controls</item>
        <item name="control_desc_1">Provides illumination essential for photosynthesis in plants and visibility in indoor environments.</item>
        <item name="control_desc_2">Circulates water through a system, such as in hydroponics or aquariums.</item>
        <item name="control_desc_3">Dispenses precise amounts of pH-adjusting solutions to regulate and maintain the pH level of a fluid.</item>
        <item name="control_desc_4">Dispenses specific amounts of nutrient solutions to control the electrical conductivity and nutrient levels of a solution in applications like hydroponics.</item>
        <item name="control_desc_5">Removes stale air or unwanted odors from an enclosed space</item>
        <item name="control_desc_6">Generates airflow for ventilation or cooling purposes in various applications</item>
        <item name="control_desc_7">AI can be turned off for manual control over the equipment.</item>
        <item name="control_desc_8">Current temperature will determine if the light is on/off. Temperature OK/HIGH wil turn light off. Temperature LOW will turn light on.</item>
        <item name="control_desc_9">Current humidity will determine if the extractor fan is on/off. Humidity LOW/OK will turn light off. Humidity HIGH wil turn extractor fan on. </item>
        <item name="control_desc_10">Current ph will determine if the ph pumps are increasing pH or decreasing pH. pH LOW will increase pH. pH HIGH will decrease pH. ph OK will turn pumps off.</item>
        <item name="control_desc_11">Current EC will determine if the EC pumps are increasing EC or decreasing EC. EC LOW will increase EC. EC HIGH will decrease EC. EC OK will turn pumps off.</item>
    </string-array>

    <!--sensor info-->
    <string-array name="sensor_info_title">
        <item name="sensor_title_1">pH:</item>
        <item name="sensor_title_2">EC:</item>
        <item name="sensor_title_3">Temperature:</item>
        <item name="sensor_title_4">Water flow rate:</item>
        <item name="sensor_title_5">Light level:</item>
        <item name="sensor_title_6">Humidity:</item>
    </string-array>

    <string-array name="sensor_info_desc">
        <item name="sensor_desc_1">Measurement of how acidic or basic the water is.</item>
        <item name="sensor_desc_2">Concentration of nutrients in the water.</item>
        <item name="sensor_desc_3">Affects plant growth, nutrient absorption, and system stability.</item>
        <item name="sensor_desc_4">Controls nutrient delivery.</item>
        <item name="sensor_desc_5">Impacts photosynthesis.</item>
        <item name="sensor_desc_6">Amount of moisture in the air in a hydroponic system</item>
    </string-array>

    <!--control/predictions info-->
    <string-array name="control_prediction_info_title">
        <item name="control_prediction_1">AI Status:</item>
        <item name="control_prediction_2">Temperature:</item>
        <item name="control_prediction_3">Humidity:</item>
        <item name="control_prediction_4">pH:</item>
        <item name="control_prediction_5">EC:</item>
    </string-array>

    <string-array name="control_prediction_info_desc">
        <item name="control_prediction_desc_1">AI can be turned off for manual control over the equipment.</item>
        <item name="control_prediction_desc_2">Current temperature will determine if the light is on/off. Temperature OK/HIGH wil turn light off. Temperature LOW will turn light on.</item>
        <item name="control_prediction_desc_3">Current humidity will determine if the extractor fan is on/off. Humidity LOW/OK will turn light off. Humidity HIGH wil turn extractor fan on. </item>
        <item name="control_prediction_desc_4">Current ph will determine if the ph pumps are increasing pH or decreasing pH. pH LOW will increase pH. pH HIGH will decrease pH. ph OK will turn pumps off.</item>
        <item name="control_prediction_desc_5">Current EC will determine if the EC pumps are increasing EC or decreasing EC. EC LOW will increase EC. EC HIGH will decrease EC. EC OK will turn pumps off.</item>

    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--feedback message-->
    <string name="feedbackMessage">Dear valued user,\n\n

We highly appreciate your feedback! To help us better understand your concerns and improve our services, we kindly request that you be as informative as possible in your feedback message. Please provide specific details, examples, and any relevant context you think would be helpful.
\n\n
Your input is invaluable to us and plays a crucial role in making our app even better. Thank you for taking the time to share your thoughts!
\n\n
Warm regards,\n
The SmartHydro Team</string>

    <!--how to guides info titles-->
    <string-array name="how_to_guides_title">
        <item name="reset_system">Reset system</item>
        <item name="control_equipment">Manually control equipment</item>
        <item name="connect_to_SmartHydro">Connect to SmartHydro</item>
    </string-array>

    <string name="reset_guide_header">Two options for resetting system:\n1: Soft reset\n2: Hard reset</string>

    <!--soft reset-->
    <string name="reset_option_soft_title">Soft reset</string>
    <string name="reset_option_soft_reset_step_1">Step 1: Open system box in tent</string>
    <string name="reset_option_soft_reset_step_2">Step 2: Locate small red button on Arduino</string>
    <string name="reset_option_soft_reset_step_3">Step 3: Hold in until system turns off and on again</string>

    <!--hard reset-->
    <string name="reset_option_hard_title">Hard reset</string>
    <string name="reset_option_hard_reset_step_1">Step 1: Locate 2 plugs on the side of system box</string>
    <string name="reset_option_hard_reset_step_2">Step 2: Unplug and replug both </string>
    <string name="reset_option_hard_reset_step_3">Step 3: Turn switch off and on again</string>

    <!--manually control equipment-->
    <string name="manually_control_equipment_step_1">Step 1: Head to the control page through the navigation bar</string>
    <string name="manually_control_equipment_step_2">Step 2: Switch AI off. This will make the equipment controls appear </string>
    <string name="manually_control_equipment_step_3">Step 3: Switch desired controls on/off </string>

    <!--Connect to SmartHydro<-->
    <string name="connect_to_SmartHydro_step_1">Step 1: Open Wi-Fi settings on device</string>
    <string name="connect_to_SmartHydro_step_2">Step 2: Search for SmartHydro (If the network does not appear ensure that you are within range of smart hydro and that the system is on) </string>
    <string name="connect_to_SmartHydro_step_3">Step 3: Connect to SmartHydro with the password: SmartHydro123!</string>


    <!--dropdowns-->
    <string-array name="Temperatures">
        <item>Celsius (°C)</item>
        <item>Fahrenheit (°F)</item>
    </string-array>

    <string-array name="UnitOfDistance">
        <item>Kilometers (km)</item>
        <item>Miles (mi.)</item>
    </string-array>

    <string-array name="AppTheme">
        <item>Light Mode</item>
        <item>Dark Mode</item>
    </string-array>
    <string name="mapbox_access_token">sk.eyJ1IjoibHVrZWRpcnN1d2VpIiwiYSI6ImNsbnVmbTI3bzA2dTUya3M4MW82NWF6b3oifQ.7k8qZTDxk9HGm98R_w-3Wg</string>
    <string name="google_maps_api">AIzaSyCZmLILdvs9CtlAipuMbW08eZ2rkAfgAm0</string>
</resources>
